@@ -27,6 +27,11 @@
 #
 # Revisions   :
 #    $Log$
+#    Revision 1.25  2008/04/26 10:34:18  fabiankeil
+#    If zlib support is unavailable and there are content filters active
+#    but the prevent-compression action is disabled, include a warning
+#    on the show-url-info page that compression might prevent filtering.
+#
 #    Revision 1.24  2008/02/10 17:26:52  fabiankeil
 #    Reduce superfluous white space by not marking
 #    up the final results list as paragraph.
@@ -235,6 +240,20 @@
 <!--  if-cgi-editor-is-disabled-end@ -->
       </td>
     </tr>
+<!-- @if-filters-might-be-ineffective-start -->
+    <tr>
+      <td class="warning">
+        <h2>Warning:</h2>
+        <p>
+          This Privoxy version has been build without zlib support,
+          <strong>content filters will not work if the server sends compressed content.</strong>
+          Consider enabling the <a title="prevent-compression documentation"
+           href="@user-manual@actions-file.html#PREVENT-COMPRESSION">prevent-compression</a>
+          action for this URL or rebuild Privoxy with zlib support.
+        </p>
+      </td>
+    </tr>
+<!-- if-filters-might-be-ineffective-end@ -->
 <!-- @if-valid-url-start -->
     <tr>
       <td class="box">
